fixed button spacing

--- a/src/app/hero-detail/hero-detail.component.scss
+++ b/src/app/hero-detail/hero-detail.component.scss
@@ -29,3 +29,6 @@ button:disabled {
     color: #ccc;
     cursor: auto;
 }
+button.go-back {
+    margin-right: 10px;
+}
